--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <div class="col-lg-12 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
-          <a class="d-block" href="mailto:tvtmobi.com@gmail.com">tvtmobi.com[@]Gmail.com</a>
+          <a class="d-block" href="mailto:contact@tvtmobi.com">contact[@]tvtmobi.com</a>
         </div>
       </div>
     </div>
