--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
         </div>
         -->
         <div class="col-lg-12 mr-auto text-center">
-          <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
+          <img src="https://lh3.googleusercontent.com/6uyY0XDzprJVh53zOs4a8N95ivpIkh6PdDOUWTa_ZHNugbNlwF9ngeaHYeGw-Ton_x23=w144-h144-n-rw"/>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
-          <a class="d-block" href="mailto:contact@tvtmobi.com">contact[@]tvtmobi.com</a>
+          <a class="d-block" href="https://www.facebook.com/TVTMobi-182659318969526/">Fanpage</a>
         </div>
       </div>
     </div>
