Update Icon Stores

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <!-- Font Awesome Icons -->
   <link href="vendor/fontawesome/css/all.css" rel="stylesheet" type="text/css">
+  <link href="vendor/fontawesome/css/brands.css" rel="stylesheet">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
@@ -81,7 +82,7 @@
         </div>
         <div class="col-lg-8 align-self-baseline">
           <p class="text-white-75 font-weight-light mb-5">We're focusing to make Games & Education applications</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://play.google.com/store/apps/dev?id=6636669597059784926" target="_blank">Google Play Store</a>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://play.google.com/store/apps/dev?id=6636669597059784926" target="_blank"><i class="fab fa-google-play"></i> Google Play Store</a>
         </div>
       </div>
     </div>
@@ -164,24 +165,11 @@
                 Games
               </div>
               <div class="project-name">
-                Word Puzzle
+                Knife Shooter - Throw Knife Hit To Top
               </div>
             </div>
           </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Games
-              </div>
-              <div class="project-name">
-                Kids Puzzle Games
-              </div>
-            </div>
-          </a>
-        </div>
+        </div>     
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
             <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
@@ -195,25 +183,13 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Application
-              </div>
-              <div class="project-name">
-                Learning Japanese
-              </div>
-            </div>
-          </a>
-        </div>
+        
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
             <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
             <div class="portfolio-box-caption p-3">
               <div class="project-category text-white-50">
-                Application
+                Other Games & Applications
               </div>
               <div class="project-name">
                 Comming soon
@@ -229,8 +205,8 @@
   <section class="page-section bg-dark text-white">
     <div class="container text-center">
       <h2 class="mb-4">Free Download</h2>
-      <a class="btn btn-light btn-xl" href="https://play.google.com/store/apps/dev?id=6636669597059784926" target="_blank">Google Play</a>
-      <a class="btn btn-light btn-xl" href="#"><i class="fa fa-apple" aria-hidden="true"></i>Appstore</a>
+      <a class="btn btn-light btn-xl" href="https://play.google.com/store/apps/dev?id=6636669597059784926" target="_blank"><i class="fab fa-google-play"></i> Google Play</a>
+      <a class="btn btn-light btn-xl" href="#"><i class="fab fa-app-store-ios"></i> Appstore</a>
     </div>
   </section>
 
@@ -241,19 +217,23 @@
         <div class="col-lg-8 text-center">
           <h2 class="mt-0">Contact Us!</h2>
           <hr class="divider my-4">
-          <img src="img/Fanpage_Logo.png" alt="Facebook Fanpage"/> 
+          <img src="img/Fanpage_Logo.png" alt="TVTMobi Facebook Fanpage"/> 
           <p class="text-muted mb-5">Give us a call or send us an email and we will get back to you as soon as possible!</p>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-6 mr-auto text-center">                   
-          <a class="d-block" href="https://www.facebook.com/TVTMobi-182659318969526/"><img src="img/fb.png"/>TVTMobi Fanpage</a>
-        </div>
-        
-        <div class="col-lg-6 mr-auto text-center">          
-          <a class="d-block" href="https://www.youtube.com/channel/UCfwI-2kDp2iY9UDzw-FjbPg"><img src="img/fb.png"/>Youtube Channel</a>
-        </div>
-
+      <div class="row justify-content-center">
+        <div class="col-md-2 text-center">                   
+            <a class="d-block" title="TVTMobi Facebook" href="https://www.facebook.com/TVTMobi-182659318969526/" target="_blank"><img src="img/other/facebook.png"/></a>
+          </div>
+          <div class="col-md-2 text-center">                   
+            <a class="d-block" title="TVTMobi Instagram" href="https://www.instagram.com/tvtmobi/" target="_blank"><img src="img/other/instagram.png"/></a>
+          </div>
+          <div class="col-md-2 text-center">          
+            <a class="d-block" title="TVTMobi Youtube" href="https://www.youtube.com/channel/UCfwI-2kDp2iY9UDzw-FjbPg" target="_blank"><img src="img/other/youtube.png"/></a>
+          </div>
+          <div class="col-md-2 text-center">          
+            <a class="d-block" title="TVTMobi Twitter" href="https://twitter.com/tvtmobi" target="_blank"><img src="img/other/twitter.png"/></a>
+          </div>
       </div>
     </div>
   </section>
@@ -262,7 +242,7 @@
   <footer class="bg-light py-5">
     <div class="container">
       <div class="small text-center text-muted">Copyright &copy; 2019 - TVTMobi.com</div>
-      <div class="small text-center text-muted"><a href="policy/kanaquiz/privacy_policy.html" target="_blank">Privacy Policy</a></div>
+      <div class="small text-center text-muted"><a href="policy/privacy_policy.html" target="_blank">Privacy Policy</a></div>
     </div>
   </footer>
 
