--- a/policy/privacy_policy.html
+++ b/policy/privacy_policy.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <h2>Privacy Policy</h2> <p>
-                    TVTMobi built the KanaQuiz+ | Game for Learning Japanese Alphabet app as
+                    TVTMobi built all the app as
                     an Ad Supported app. This SERVICE is provided by
                     TVTMobi at no cost and is intended for
                     use as is.
@@ -27,8 +27,7 @@
                     Policy.
                   </p> <p>
                     The terms used in this Privacy Policy have the same meanings
-                    as in our Terms and Conditions, which is accessible at
-                    KanaQuiz+ | Game for Learning Japanese Alphabet unless otherwise defined in this Privacy
+                    as in our Terms and Conditions, which is accessible defined in this Privacy
                     Policy.
                   </p> <p><strong>Information Collection and Use</strong></p> <p>
                     For a better experience, while using our Service,
