Update icon Instagram

--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         </div>
         <div class="col-lg-8 align-self-baseline">
           <p class="text-white-75 font-weight-light mb-5">We're focusing to make Games & Education applications</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://play.google.com/store/apps/dev?id=6636669597059784926" target="_blank"><i class="fab fa-google-play"></i> Google Play Store</a>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://play.google.com/store/apps/dev?id=6636669597059784926" target="_blank"><i class="fab fa-google-play"></i> Google Play</a>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://apps.apple.com/us/developer/tran-thanh/id597319490" target="_blank"><i class="fab fa-apple"></i> AppStore</a>
         </div>
       </div>
     </div>
